<resources>
    <string name="app_name">vk_intern</string>
    <string name="toolbar_text">Files</string>
    <string name="sort_name_asc">File name (A-Z)</string>
    <string name="sort_name_desc">File name (Z-A)</string>
    <string name="sort_by_size_desc">Size (largest first)</string>
    <string name="sort_by_size_asc">Size (smallest first)</string>
    <string name="sort_by_date_asc">Modified (newest first)</string>
    <string name="sort_by_date_desc">Modified (oldest first)</string>
    <string name="sort_by_type_asc">Type (A-Z)</string>
    <string name="sort_by_type_desc">Type (Z-A)</string>
    <string name="toolbar_back_content">Back Button</string>
    <string name="item_icon_description">Item icon</string>
    <string name="no_files">No files</string>
    <string name="modified">Modified</string>
    <string name="share_file">Share file</string>
</resources>